@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'jacoco'
     id 'org.springframework.boot' version '3.2.2'
     id 'io.spring.dependency-management' version '1.1.4'
     id 'checkstyle'
@@ -17,6 +18,27 @@ checkstyle {
     configFile = '../checkstyle.xml' as File
 }
 
+jacoco {
+    toolVersion = "0.8.12"
+}
+
+test{
+    useJUnitPlatform() {
+        excludeTags 'NeedsFix'
+        excludeTags 'frontend'
+    }
+    finalizedBy jacocoTestReport
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+}
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = true
+        html.required = true
+    }
+}
+
 repositories {
     mavenCentral()
 }
@@ -24,13 +46,26 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-
+    implementation 'javax.persistence:javax.persistence-api:2.2'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
+    //JJWT
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.5'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.5'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.5'
 
-    implementation 'com.h2database:h2'
+
+    testImplementation 'org.springframework:spring-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'commons-io:commons-io:2.7'
+
+    implementation 'org.springframework.boot:spring-boot-starter-jersey'
+    implementation 'org.glassfish.jersey.core:jersey-client:3.0.0'
+    implementation 'org.glassfish.jersey.inject:jersey-hk2:3.0.0'
+    implementation 'jakarta.ws.rs:jakarta.ws.rs-api:3.0.0'
 
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
@@ -38,7 +73,10 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok:1.18.30'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
 
-    testImplementation 'org.mockito:mockito-all:1.9.5'
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+    testImplementation 'org.springframework.security:spring-security-test'
+
+    testImplementation 'org.mockito:mockito-inline:3.12.4'
 
     implementation 'org.apache.pdfbox:pdfbox:3.0.2'
 
@@ -46,8 +84,16 @@ dependencies {
 
     implementation 'com.oracle.database.jdbc:ojdbc8:19.6.0.0'
     implementation 'com.oracle.database.jdbc:ucp:19.6.0.0'
-}
 
-test {
-    useJUnitPlatform()
+    // https://mvnrepository.com/artifact/org.apache.poi/poi
+    implementation group: 'org.apache.poi', name: 'poi', version: '3.9'
+    implementation 'org.apache.poi:poi-ooxml:3.9'
+
+    implementation 'com.sun.mail:javax.mail:1.6.2'
+    implementation 'javax.activation:activation:1.1.1'
+
+    implementation 'org.springdoc:springdoc-openapi-ui:1.8.0'
+
+    testImplementation 'org.seleniumhq.selenium:selenium-java:4.21.0'
+
 }
